# reddi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
redcli/: __init__.py  __main__.py  auth.py  cli.py  output.py
redcli/commands/: auth_cmd.py  me.py  post.py  status.py  watch.py
reddi/: __init__.py  __main__.py  auth.py  cli.py
reddi/commands/: auth_cmd.py  comment.py  crosspost.py  devvit.py  flairs.py  inbox.py  me.py  post.py  search.py  status.py  subs.py  watch.py
reddy/: __init__.py  __main__.py  auth.py  cli.py
reddy/commands/: auth_cmd.py  me.py  post.py  status.py  watch.py
tests/: test_smoke.py
